--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/3-common.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-common.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-common.css">
 
     <title>AirBnB Clone</title>
 </head>
