--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,16 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
-	<link rel="stylesheet" type="text/css" href="styles/2-header.css">
-	<link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-
-    <title>AirBnB Clone</title>
-</head>
-<body>
-	<header></header>
-	<footer>Best School</footer>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Document</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <a href="#" id="nav-brand">Amazing Products</a>
+            <nav>
+                
+                <a href="#">Features</a>
+                <a href="#">Enterprise</a>
+                <a href="#">Support</a>
+                <a href="#">Pricing</a>
+                </nav>
+                
+        </header>
+    </body>
 </html>
