--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/3-common.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-common.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-common.css">
+    
+    <link rel="icon" href="images/icon.png" type="image/icon">
+    <title>AirBnB</title>
 
-    <title>AirBnB Clone</title>
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
 </head>
 <body>
-	<header></header>
-	<footer>Best School</footer>
+    <header>
+        <div> <img src="images/logo (1).png" alt="logo"></div>
+    </header>
+    <footer>
+        <div>Best School</div>
+    </footer>
+    
 </body>
 </html>
