--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
-	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
+    <title>AirBnB</title>
 
-    <title>AirBnB Clone</title>
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/4-filters.css">
 </head>
 <body>
-	<header></header>
+    <header></header>
     <div class="container">
         <section class="filters">
             <button>Search</button>
         </section>
     </div>
-	<footer>Best School</footer>
+    <footer>
+        <div>Best School</div>
+    </footer>
+    
 </body>
 </html>
