--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -20,9 +20,9 @@
             background: green;
             height: 60px;
             width: 100%;
-            position: fixed;
+            position: absolute;
             bottom: 0;
-            left: 0;
+            text-align: center;
             display: flex;
             align-items: center;
             justify-content: center;
