--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/icon.png" type="image/icon">
     <title>AirBnB</title>
 
     <link rel="stylesheet" href="styles/4-common.css">
@@ -11,7 +12,9 @@
     <link rel="stylesheet" href="styles/4-filters.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div> <img src="images/logo (1).png" alt="logo"></div>
+    </header>
     <div class="container">
         <section class="filters">
             <button>Search</button>
