--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/icon.png" type="image/icon">
     <title>AirBnB</title>
 
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
-    <link rel="stylesheet" href="styles/4-filters.css">
-    <link rel="stylesheet" href="styles/5-filters.css">
     <link rel="stylesheet" href="styles/6-filters.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div> <img src="images/logo (1).png" alt="logo"></div>
+    </header>
     <div class="container">
         <section class="filters">
             <div class="locations">
